feat：场景文件保存

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/three.js"></script>
+    <button id="save">保存</button>
+    <script type="module" src="/vis.js"></script>
   </body>
 </html>
