--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   <body>
     <div id="app"></div>
     <button id="save">保存</button>
-    <script type="module" src="/vis.js"></script>
+    <script type="module" src="/src/vis.js"></script>
   </body>
 </html>
